tests/fixtures/fail/throw_in_closure.sc
let main(): i32 = {
  let fail = { () -> throw(true) }
  fail()
}
